syntax = "proto3";

package sky;

import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  string name = 2;
}

message Post {
  string id = 1;
  string user_id = 2;
  string content = 3;
  google.protobuf.Timestamp create_time = 4;
}
